# Oscar-ISO8583

./: CMakeLists.txt  CMakeLists.txt_WORKING_with_ISO8583
